#AUX_SOURCE_DIRECTORY(./unittest SRE_LIST)
SET(SRC_LIST main.c)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g")
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)
ADD_EXECUTABLE(main ${SRC_LIST})
TARGET_LINK_LIBRARIES(main app)
TARGET_LINK_LIBRARIES(main compiler)
TARGET_LINK_LIBRARIES(main commodule)
TARGET_LINK_LIBRARIES(main mempool)
TARGET_LINK_LIBRARIES(main pager)
TARGET_LINK_LIBRARIES(main executer)
TARGET_LINK_LIBRARIES(main btree)
#SET_TARGET_PROPERTIES(compiler PROPERTIES LINKER_LANGUAGE C)
